change to use java 16